--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,10 @@
 body {
     background-color: lightblue;
+    font-family: 'Roboto', 'Open Sans';
 }
+
+.images {
+    height: 300px;
+    width: 500px;
+}
+
