--- a/assets/style.css
+++ b/assets/style.css
@@ -6,5 +6,10 @@ body {
 .images {
     height: 300px;
     width: 500px;
+    margin: 20px;
 }
 
+h2{
+    text-align: center;
+    margin: 300 px;
+}
